--- a/about.css
+++ b/about.css
@@ -1,8 +1,26 @@
+header {
+    font-size: smaller;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: beige;
+    color: #198754;
+}
+
+head {
+    background-color: beige;
+}
+
+body {
+    background-color: beige;
+}
 #container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:black;
+    text-decoration: double;
+    background-color: beige;
 }
 
 .allColumns {
@@ -15,7 +33,6 @@
     margin-top: 10%;
     justify-items: center; 
     padding: 10px;
-    background-color: ;
 }
 
 .allColumns img {
@@ -26,18 +43,20 @@
 
 h1 {
     text-align: center;
-    color: black
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #198754;
 }
 p {
     text-align: center;
     size: 12px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .back-link {
     display: inline-block;
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: 4E763B;
+    background-color: #4E763B;
     color: black;
     text-decoration: none;
     border-radius: 5px;
