--- a/hobbies.css
+++ b/hobbies.css
@@ -1,17 +1,18 @@
 header {
-    background-color: #4E763B;
-    color: white;
+    background-color: beige;
+    color: #198754;
     padding: 20px;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
-    background-color: #4E763B;
+    background-color: beige;
 }
 
 h1 {
     font-weight: 400;
-    color: white;
+    color: #198754;
 }
 
 #image-container {
@@ -20,9 +21,9 @@ h1 {
 }
 
 .section1 {
-    background-color: #4E763B;
+    background-color: beige;
     text-align: center;
-    color: white;
+    color: #198754;
 }
 
 .hobbies img {
@@ -40,16 +41,17 @@ figure {
 figcaption {
     font-style: italic;
     font-size: .75em;
-    color: white;
+    color: #198754;
 }
 
 p {
     text-align: center;
+    color: #198754;
 }
 
 .hobbies {
-    background-color: #4E763B;
-    color: white;
+    background-color: beige;
+    color: #198754;
     padding: 1rem;
     height: auto;
     text-align: center;
@@ -70,5 +72,23 @@ p {
 }
 
 .hobbies:hover {
-    color: #0d440b;
+    color: #052904;
+}
+
+.back-link {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4E763B;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.back-link:hover {
+    background-color: #79fcea;
+}
+
+footer {
+    text-align: center;
 }
