--- a/site.css
+++ b/site.css
@@ -1,7 +1,3 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -54,6 +50,11 @@ body {
 }
 /* rtl:end:ignore */
 
+img.rounded-circle {
+  object-fit: cover;
+  width: 140px;
+  height: 140px;
+}
 
 
 /* RESPONSIVE CSS
